<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sure">确定</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="more_data">更多</string>
    <string name="no_data_to_load">亲，没有数据可供加载</string>
    <string name="data_loading">加载中&#8230;</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">上次刷新时间:</string>
    <string name="xlistview_header_hint_loading">正在加载..</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_footer_hint_ready">点击查看更多</string>
    <string name="xlistview_footer_hint_normal">点击查看更多</string>
    <string name="app_name">华西金融</string>
    <string name="action_settings" tools:ignore="UnusedResources">Settings</string>
    <string name="main_title">华西金融</string>
    <string name="investment_xmlb">借款项目</string>
    <string name="investment_zqzr">债权转让</string>
    <string name="home_notice">公告详情</string>
    <string name="recharge_zxcz">在线充值</string>
    <string name="recharge_yhzz">银行转账(推荐)</string>
    <string name="other_about_us">关于我们</string>
    <string name="maintain">服务器维护</string>
    <string name="xinrenzhuanxiang">新人专享</string>
    <string name="tuijianyoujiang">推荐有奖</string>
    <string name="xinrencontext">注册即得体验金</string>
    <string name="tuijiancontext">邀请好友注册成功可得现金红包</string>
    <string name="login">登录</string>
    <string name="register_login">立即登录</string>
    <string name="user_name_hint">请输入用户名/手机号码/邮箱</string>
    <string name="user_pwd_hint">请输入密码</string>
    <string name="user_vercode_hint">验证码</string>
    <string name="vercode_hint">验&#8194;证&#8194;码：</string>
    <string name="bank_num">银行卡卡号：</string>
    <string name="user_remember_pwd">记住密码</string>
    <string name="user_forget_pwd">忘记密码</string>
    <string name="use_other_login">其它方式登录</string>
    <string name="login_name_error" tools:ignore="UnusedResources">用户名格式错误</string>
    <string name="login_name_error_detail" tools:ignore="UnusedResources">用户名由6&#8211;18个字母或数字组合</string>
    <string name="login_pwd_error">密码格式错误</string>
    <string name="login_pwd_error_detail">密码由6&#8211;20个字符组成</string>
    <string name="login_ver_error">验证码格式错误</string>
    <string name="login_ver_error_detail">验证码不能为空</string>
    <string name="login_forget_toast" tools:ignore="UnusedResources">请访问WEB版功能找回您的密码！</string>
    <string name="qq">QQ</string>
    <string name="sina_weibo">微博</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出; \n 如微信登录，需要微信客户端</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="register">免费注册</string>
    <string name="register_name_hint">请输入用户名</string>
    <string name="register_pwd_hint">请输入密码</string>
    <string name="register_repwd_hint">请再次输入密码</string>
    <string name="register_yaoqing_hint">邀请码/推广人手机号码/业务员工号，有则填</string>
    <string name="register_vercode_hint">验证码</string>
    <string name="register_agreen">我已阅读并同意</string>
    <string name="register_dm_zcxy">《迪蒙网贷注册协议》</string>
    <string name="register_phone_hint">请输入手机号</string>
    <string name="register_vevify_hint">请输入验证码</string>
    <string name="register_agreement">《迪蒙网贷平台服务条款》</string>
    <string name="register_name_desc">6&#8211;18个字符，可使用字母、数字、下划线，需以字母开头</string>
    <string name="register_pwd_desc">6&#8211;20个字符，区分大小写</string>
    <string name="register_name_error">用户名格式错误</string>
    <string name="register_name_error_detail">用户名由6&#8211;18个字母或数字组合</string>
    <string name="register_pwd_error">密码格式错误</string>
    <string name="register_pwd_error_detail">密码由6&#8211;20个字符</string>
    <string name="register_repwd_error">密码和确认密码不一致</string>
    <string name="register_zcxy">注册协议</string>
    <string name="has_account">已有账号</string>
    <string name="no_account">没有账号</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="supplement_info">完善资料</string>
    <string name="supplement_error1">用户名不能为空！</string>
    <string name="supplement_error2">用户名6&#8211;18个字符，可使用字母、数字、下划线，需以字母开头！</string>
    <string name="supplement_error3">密码不能为空！</string>
    <string name="supplement_error4">登录密码6&#8211;18个字符，至少包含数字、大写字母、小写字母、符号中的2种</string>
    <string name="supplement_error5">两次密码输入不一致！</string>
    <string name="supplement_pwd_format_error">密码格式不正确，或密码不能为空！</string>
    <string name="register_username_input">1234567890.+-*/%_$@?~#!\n()ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="account_evaluation">未评估</string>
    <string name="account_risk_evaluation">风险评估</string>
    <string name="account_savelvl2">安全等级</string>
    <string name="account_savelvl_low">低</string>
    <string name="account_savelvl_mid">中</string>
    <string name="account_savelvl_hight">高</string>
    <string name="account_totalobtain">已赚总金额</string>
    <string name="account_canuse_amount">可用余额</string>
    <string name="account_fronzen">冻结金额</string>
    <string name="account_jingzc">账户净资产</string>
    <string name="account_touzizc">出借资产 </string>
    <string name="account_jiekuanfz">借款负债  </string>
    <string name="account_daihuanjiner">待还总金额</string>
    <string name="account_userinfotitle">个人基础信息</string>
    <string name="account_shimingrenzheng">实名认证</string>
    <string name="account_xingmingtip">请输入真实姓名</string>
    <string name="account_shenfenzhanghao" tools:ignore="UnusedResources">身份证号</string>
    <string name="account_shenfenzhangtip">请输入身份证号</string>
    <string name="account_submit">提交</string>
    <string name="account_bindemail">绑定邮箱</string>
    <string name="account_normalemail" tools:ignore="UnusedResources">常用邮箱</string>
    <string name="account_emailtip">请输入常用邮箱</string>
    <string name="account_yanzhengma">验证码</string>
    <string name="account_yanzhengmatip" tools:ignore="UnusedResources">请输入验证码</string>
    <string name="account_getyanzhengma">获取验证码</string>
    <string name="account_bindphone">绑定手机</string>
    <string name="account_phonenum" tools:ignore="UnusedResources">手机号码</string>
    <string name="mobile_vercode">手机验证码</string>
    <string name="account_phonenumtip">请输入手机号码</string>
    <string name="account_id_vi">认证</string>
    <string name="account_email_bind">绑定</string>
    <string name="account_mobile_bind">绑定</string>
    <string name="account_id_ok_btn">提交</string>
    <string name="account_namever_no_name">真实姓名不能为空</string>
    <string name="account_namever_no_id">身份证号码不能为空</string>
    <string name="account_smrzcg">实名认证成功</string>
    <string name="account_emailver_no_email">邮箱地址不能为空</string>
    <string name="account_emailver_email_format_erro">邮箱地址格式不正确</string>
    <string name="account_re_yzm">%1$ds后重试</string>
    <string name="account_yzm_none">验证码不能为空</string>
    <string name="account_phone_none">手机号码不能为空</string>
    <string name="account_phone_format_erro">手机号码格式不正确</string>
    <string name="register_ok_alert">注册成功！为了您的账户安全，请完善安全信息认证！</string>
    <string name="please_complete_security_info">为了您的资金安全，出借前请完善安全信息认证</string>
    <string name="please_complete_security_info_recharge">为了您的资金安全，充值前请完善安全信息认证</string>
    <string name="goto_auth">马上完善</string>
    <string name="not_goto_auth">先逛逛</string>
    <string name="available_ammount_not_enough">账户余额不足，请充值后重试！</string>
    <string name="deal_pwd_err">交易密码不正确，请重试！</string>
    <string name="deal_pwd_false">您输入的交易密码有误，请确认后重新输入！</string>
    <string name="dealrecord_title">交易记录</string>
    <string name="dealrecord_all_tab">全部</string>
    <string name="dealrecord_in_tab">收入</string>
    <string name="dealrecord_out_tab">支出</string>
    <string name="creditor_title">我的债权</string>
    <string name="creditor_back_tab">回款中</string>
    <string name="creditor_doing_tab">投标中</string>
    <string name="creditor_finish_tab">已结清</string>
    <string name="creditor_rate_text">年利率</string>
    <string name="creditor_jindu_text" tools:ignore="UnusedResources">进度</string>
    <string name="creditor_jindu_text_new">进度：</string>
    <string name="creditor_finish_date">结清日期</string>
    <string name="creditor_right_value">债权价值：%1$s</string>
    <string name="creditor_transfer_rate">转让费率：%1$s</string>
    <string name="creditor_transfer_success">转让申请提交成功，请耐心等待审核！</string>
    <string name="borrow_title">我的借款</string>
    <string name="borrow_detail_title">还款详情</string>
    <string name="borrow_doing_tab">还款中</string>
    <string name="borrow_finish_tab">已结清</string>
    <string name="borrow_daihuanjine">待还金额</string>
    <string name="borrow_daihuankuanri">待还款日</string>
    <string name="borrow_jiekuanjine">借款金额</string>
    <string name="borrow_qixian">剩余期数</string>
    <string name="borrow_qixian_1">期限</string>
    <string name="borrow_huankuanzonge">还款总额</string>
    <string name="borrow_huanqingriqi">还清日期</string>
    <string name="borrow_huankuanriqi">还款日期</string>
    <string name="borrow_jine">金额</string>
    <string name="borrow_zhuangtai">状态</string>
    <string name="biao_year_rate">年利率</string>
    <string name="biao_term">期数</string>
    <string name="biao_benxi">代收本息</string>
    <string name="biao_nexttime">下个还款日</string>
    <string name="biao_tzje">投资金额</string>
    <string name="biao_yzje">已赚金额</string>
    <string name="biao_jqrq">结清日期</string>
    <string name="biao_sysj" tools:ignore="UnusedResources">剩余时间</string>
    <string name="biao_sysj_new">剩余时间：</string>
    <string name="tou_biao_01">投标</string>
    <string name="tou_biao">购买</string>
    <string name="bid_nhsy">年化收益</string>
    <string name="bid_tzqx">出借期限</string>
    <string name="bid_xmgm">项目规模</string>
    <string name="bid_syje">剩余金额</string>
    <string name="bid_fbrq">发布日期</string>
    <string name="bid_wjrq">完结日期</string>
    <string name="bid_tzjl">出借记录</string>
    <string name="bid_xgwj">相关文件</string>
    <string name="please_input_deal_pwd">请输入交易密码</string>
    <string name="please_input_deal_pwd_again">请再次输入交易密码</string>
    <string name="recharge">充值</string>
    <string name="modify_login_pwd_old">原登录密码</string>
    <string name="modify_login_pwd_new">新密码</string>
    <string name="modify_login_pwd_re_new">确认新密码</string>
    <string name="modify_login_pwd_old_forget">忘记原密码</string>
    <string name="modify_pay_pwd_old">原交易密码</string>
    <string name="modify_pay_pwd_new">新交易密码</string>
    <string name="modify_pay_pwd_re_new">确认新交易密码</string>
    <string name="modify_pay_pwd_old_forget">忘记原交易密码</string>
    <string name="modify_login_pwd_confirm">确定</string>
    <string name="bid_buy_user_amount">账户余额：%1$s元</string>
    <string name="trade_record_balance">余额：</string>
    <string name="trade_record_time">2015&#8211;11&#8211;02</string>
    <string name="one_thousand">1000</string>
    <string name="zero_yuan">0.00</string>
    <string name="bid_sykjjer">剩余可捐金额(元)</string>
    <string name="bid_donation_btn">马上捐助</string>
    <string name="bid_donation_amount">捐助金额：</string>
    <string name="donation_max">%1$s</string>
</resources>