<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/title_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_05"
        android:layout_marginTop="@dimen/content_margin_top"
        android:background="@color/line_color" />

    <EditText
        android:id="@+id/login_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_24"
        android:drawablePadding="5dp"
        android:hint="@string/user_name_hint"
        android:inputType="text"
        android:maxLength="18"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColorHint="@color/edittext_hint_color"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_05"
        android:background="@color/line_color" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_23"
        android:drawablePadding="5dp"
        android:hint="@string/user_pwd_hint"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColorHint="@color/edittext_hint_color"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_05"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/login_ok_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_btn_height"
        android:layout_marginLeft="@dimen/space_12"
        android:layout_marginRight="@dimen/space_12"
        android:layout_marginTop="@dimen/space_20"
        android:background="@drawable/btn_main_color_big"
        android:text="@string/login"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/space_10"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@null"
            android:text="@string/register"
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_size_15" />
        
        <View 
            android:layout_width="1.5dp"
            android:layout_height="15dp"
            android:layout_marginLeft="@dimen/space_3"
            android:layout_marginRight="@dimen/space_3"
            android:background="@color/main_color"/>
        
        <Button
            android:id="@+id/login_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@null"
            android:text="@string/user_forget_pwd"
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_05"
        android:background="#cccccc"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-9dp"
        android:background="@color/main_bg"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="@string/use_other_login"
        android:textColor="@color/text_black_8"
        android:textSize="@dimen/text_size_13"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/qq_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/qq"
            android:text="@string/qq"
            android:textColor="@color/text_black_6"
            android:textSize="@dimen/text_size_13" >
        </Button>

        <Button
            android:id="@+id/xl_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@null"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/sina"
            android:text="@string/sina_weibo"
            android:textColor="@color/text_black_6"
            android:textSize="@dimen/text_size_13" >
        </Button>
    </LinearLayout>

</LinearLayout>