<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_05"
        android:layout_marginTop="@dimen/content_margin_top"
        android:background="@color/line_color" />

    <EditText
        android:id="@+id/deal_pwd_old"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_23"
        android:drawablePadding="5dp"
        android:hint="@string/modify_pay_pwd_old"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="@color/edittext_hint_color"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_05"
        android:background="@color/line_color" />

    <EditText
        android:id="@+id/deal_pwd_new"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_23"
        android:drawablePadding="5dp"
        android:hint="@string/modify_pay_pwd_new"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="@color/edittext_hint_color"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_05"
        android:background="@color/line_color" />

    <EditText
        android:id="@+id/deal_pwd_re"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_23"
        android:drawablePadding="5dp"
        android:hint="@string/modify_pay_pwd_re_new"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="@color/edittext_hint_color"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_05"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/modify_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_btn_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_main_color_big"
        android:text="@string/modify_login_pwd_confirm"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/forget_pay_old_pwd_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/modify_pay_pwd_old_forget"
        android:textColor="@color/main_color" />

</LinearLayout>