<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/title_layout"/>
	<EditText
        android:id="@+id/trade_pwd_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_23"
        android:drawablePadding="5dp"
        android:hint="@string/please_input_deal_pwd"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColorHint="@color/edittext_hint_color"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_05"
        android:background="@color/line_color" />
    <EditText
        android:id="@+id/confirm_trade_pwd_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_23"
        android:drawablePadding="5dp"
        android:hint="@string/please_input_deal_pwd_again"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColorHint="@color/edittext_hint_color"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_05"
        android:background="@color/line_color" />
    
    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_btn_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_main_color_big"
        android:text="@string/modify_login_pwd_confirm"
        android:textColor="@color/white" />
</LinearLayout>
